[package]
name = "sacio"
version = "0.1.0"
authors = ["Brian Savage <savage@uri.edu>"]
edition = "2018"
repository = "https://github.com/savage13/sacio.rs"
homepage = "https://github.com/savage13/sacio.rs"
documentation = "https://docs.rs/sacio"
license = "MIT/X11"
description = "Library for reading and writing SAC (Seismic Analysis Code) files"

[dependencies]
byteorder     = "1.0"
geographiclib = "0.1.0"
flinn_engdahl = "0.1.0"
chrono        = "0.4.6"

